--- a/app/views/tapes/new.html.erb
+++ b/app/views/tapes/new.html.erb
@@ -1,4 +1,12 @@
-<h1>     MIXTAPE CREATE    </h1>
+<h1>     CREATE MIXTAPE    </h1>
 
 <%= form_with(model: @tape) do |f| %>
-    <%=
+    <%= f.label :title %>
+    <%= f.text_field :title %> <br>
+    <%= f.label :artist %>
+    <%= f.text_field :artist %>
+     
+    <%= f.submit 'Create Mixtape'
+
+
+<% end %>
