--- a/app/views/tapes/new.html.erb
+++ b/app/views/tapes/new.html.erb
@@ -5,8 +5,9 @@
     <%= f.text_field :title %> <br>
     <%= f.label :artist %>
     <%= f.text_field :artist %>
-     
-    <%= f.submit 'Create Mixtape'
+
+    <%= f.submit 'Create Mixtape' %>
 
 
 <% end %>
+
