added faker gem in order to fake data title and description for general entrys

--- a/app/views/tapes/show.html.erb
+++ b/app/views/tapes/show.html.erb
@@ -10,8 +10,8 @@
 
 #navigation buttons below to go back or edit goes below
 
-#<%= link_to 'Mixtape List', tapes_path %>
-#<%= link_to 'Change Mixtape', edit_tape_path(@tape)
+<%= link_to 'Mixtape List', tapes_path %>
+<%= link_to 'Change Mixtape', edit_tape_path(@tape)
 
 
 # add the opinions on this page below
