--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <%= link_to 'home', root_path, class: 'nav-link active' %>
+            </li>
+            <li>
+              <%= link_to 'Create Mixtape', new_tape_path, class: 'nav-item' %> 
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
