--- a/app/views/tapes/new.html.erb
+++ b/app/views/tapes/new.html.erb
@@ -5,6 +5,7 @@
     <%= f.text_field :title %> <br>
     <%= f.label :artist %>
     <%= f.text_field :artist %>
+    <%+ f.label :
 
     <%= f.submit 'Create Mixtape' %>
 
