--- a/app/views/tapes/index.html.erb
+++ b/app/views/tapes/index.html.erb
@@ -4,9 +4,11 @@
 #below the list of mixtapes should be clickable and show other attributes
 
 <ul>
-
-
-
+<% @tapes.each do |tap| %>
+    <li> <%= link_to (tap.title, tape_path(tap)) %> </li>
+    <li> <%= tap.artist %> </li>
+    <li> <%= tap.features %>, <%= tap.updated_at %> </li>
+<% end %>
 
 
 </ul>
