--- a/app/views/tapes/show.html.erb
+++ b/app/views/tapes/show.html.erb
@@ -5,7 +5,12 @@
 <h1><%= @tape.title %></h1>
 
 <div>
-   #all of the attributes you want to show on this show page put into here 
+   
+#all of the attributes you want to show on this show page put into here 
+    <p> <%= @tape.upload_at %> </p>
+    <p> <%= @tape.features %> </p>
+    <p> <%= @tape.likes %> </p>
+    <p> <%= @tape.tracks %> </P>
 </div>
 
 #navigation buttons below to go back or edit goes below
@@ -17,7 +22,7 @@
 # add the opinions on this page below
 
 #this is nested resources so we have to define this on the controller page using the build method.
-<%= form_with (model: [@image, @opinion]) do |f| %>
+<%= form_with (model: [@tape, @opinion]) do |f| %>
     <%= f.hidden_field :user_id, value: current_user.id %>
     <%= f.text_area :context %>
     <%= f.submit :opinion %>
