uploading all files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
               <%= link_to 'Create Mixtape', new_tape_path, class: 'nav-item' %> 
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <%= link_to 'login', login_path %> 
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
