--- a/app/views/tapes/index.html.erb
+++ b/app/views/tapes/index.html.erb
@@ -1,13 +1,11 @@
 <h1> all tapes </h1>
 
 
-#below the list of mixtapes should be clickable and show other attributes
 
 <ul>
 <% @tapes.each do |tap| %>
-    <li> <%= link_to (tap.title, tape_path(tap)) %> </li>
-    <li> <%= tap.artist %> </li>
-    <li> <%= tap.features %>, <%= tap.updated_at %> </li>
+    <li> <%= link_to (tap.title, tap_path(@tape)) %> </li>
+    
 <% end %>
 
 
