--- a/app/views/tapes/new.html.erb
+++ b/app/views/tapes/new.html.erb
@@ -5,8 +5,8 @@
     <%= f.text_field :title %> <br>
     <%= f.label :artist %>
     <%= f.text_field :artist %>
-    <%+ f.label :
-
+    <%= f.label :artcover %>
+    <%= f.text_field :artcover %> <br>
     <%= f.submit 'Create Mixtape' %>
 
 
