fixing sessions and adding helpers

--- a/app/views/tapes/index.html.erb
+++ b/app/views/tapes/index.html.erb
@@ -4,9 +4,11 @@
 
 <ul>
 <% @tapes.each do |tap| %>
-    <li> <%= link_to (tap.title, tap_path(@tape)) %> </li>
+    <li> <%= link_to(tap.title, tape_path(tap)) %> </li>
     
 <% end %>
 
 
 </ul>
+
+
