--- a/app/views/tapes/new.html.erb
+++ b/app/views/tapes/new.html.erb
@@ -7,8 +7,9 @@
     <%= f.text_field :artist %>
     <%= f.label :artcover %>
     <%= f.text_field :artcover %> <br>
+    <%= f.label :genre %>
+    <%= f.text_field :genre %>
     <%= f.submit 'Create Mixtape' %>
-
 
 <% end %>
 
