fixed the login logout added helpers to application helper file

--- a/app/views/tapes/home.html.erb
+++ b/app/views/tapes/home.html.erb
@@ -1,1 +1,10 @@
-<h1> home poage </h1>
+<h1> MIXTAPE home page </h1>
+
+<ul>
+<% @tapes.each do |tap| %>
+    <li> <%= link_to(tap.title, tape_path(tap)) %> </li>
+    
+<% end %>
+
+
+</ul>
