--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,37 +20,37 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          
+          <% if logged_in? %>
             <li class="nav-item">
               <%= link_to 'home', root_path, class: 'nav-link active' %>
             </li>
-            <li>
-              <%= link_to 'Create Mixtape', new_tape_path, class: 'nav-item' %> 
-            </li>
-            <li class="nav-item">
-              <%= link_to 'login', login_path %> 
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+
+              <li>
+                <%= link_to 'Create Mixtape', new_tape_path, class: 'nav-item' %> 
+              </li>
+             
+              <li class="nav-item">
+              <%= link_to 'logout', logout_path, method: "delete" %> 
+              </li>
+              
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+              <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+            <% end %>
+            
+            <% if logged_out? %>
+
+              <li class="nav-item">
+                <%= link_to 'login', login_path %> 
+              </li>
+              <li class="nav-item">
+                <%= link_to 'register', signup_path %> 
+              </li>
+            <% end %>
+          
         </div>
       </div>
     </nav>
