--- a/app/views/tapes/edit.html.erb
+++ b/app/views/tapes/edit.html.erb
@@ -2,15 +2,34 @@
 
 
 <%= form_with(model: @tape) do |f| %>
+    <div class="field">
     <%= f.label :title %>
-    <%= f.text_field :title %> <br>
-    
-    <%= f.label :artist %> <br>
+    <%= f.text_field :title %>
+    </div>
+    <div class="field">
+    <%= f.label :artist %>
     <%= f.text_field :artist %>
+    </div>
+
+    <%= f.label :artcover %> <br>
+    <%= f.text_field :artcover %> 
+    
+    <div class="field">
+    
+    <%= f.label :features %><br>
+    <%= f.text_field :features %>
+    </div>
+    
+    <div class="field">
+    
+    <%= f.label :genre %><br>
+    <%= f.text_field :genre %>
+    </div>
+    <br>
 
     <%= f.submit 'Change Mixtape' %>
 
 
 <% end %>
 
-    #<%= link_to "Remove Mixtape", tape_path(@tape), method: "delete" %>
+<%= link_to "Remove Mixtape", tape_path(@tape), method: "delete" %>
