--- a/app/views/tapes/new.html.erb
+++ b/app/views/tapes/new.html.erb
@@ -1,14 +1,29 @@
 <h1>     CREATE MIXTAPE    </h1>
 
 <%= form_with(model: @tape) do |f| %>
+    <div class="field">
     <%= f.label :title %>
-    <%= f.text_field :title %> <br>
+    <%= f.text_field :title %>
+    </div>
+    <div class="field">
     <%= f.label :artist %>
     <%= f.text_field :artist %>
-    <%= f.label :artcover %>
-    <%= f.text_field :artcover %> <br>
-    <%= f.label :genre %>
+    </div>
+
+    <%= f.label :artcover %> <br>
+    <%= f.text_field :artcover %> 
+    
+    <div class="field">
+    <%= f.label :features %><br>
+    <%= f.text_field :features %>
+    </div>
+    
+    <div class="field">
+   
+    <%= f.label :genre %><br>
     <%= f.text_field :genre %>
+    </div>
+    <br>
     <%= f.submit 'Create Mixtape' %>
 
 <% end %>
