added button on show page

--- a/app/views/tapes/edit.html.erb
+++ b/app/views/tapes/edit.html.erb
@@ -32,4 +32,4 @@
 
 <% end %>
 
-<%= link_to "Remove Mixtape", tape_path(@tape), method: "delete" %>
+<%= button_to "Remove Mixtape", tape_path(@tape), method: "delete" %>
