--- a/app/views/tapes/show.html.erb
+++ b/app/views/tapes/show.html.erb
@@ -19,9 +19,9 @@
 --------------------------------------------------------
 <br>
 
-<%= link_to 'Edit Current Mixtape', edit_tape_path(@tape) %>
+<%= link_to 'Edit Mixtape', edit_tape_path(@tape) %>
 <br>
-<%= link_to 'View Mixtape List', tapes_path %> 
+<%= link_to 'View All Mixtapes', tapes_path %> 
 <br>
 # add the opinions on this page below
 
