--- a/app/views/opinions/_opinion.html.erb
+++ b/app/views/opinions/_opinion.html.erb
@@ -1,5 +1,5 @@
 <li>
 <%= opinion.user.name %> - 
  <%= opinion.context %><br>
- <%= link_to 'remove', tape_path(@tape), method: "delete" %>
+ <%= link_to 'remove', tape_opinion_path(opinion.tape, opinion), method: "delete" %>
 </li>
