--- a/app/views/tapes/show.html.erb
+++ b/app/views/tapes/show.html.erb
@@ -29,10 +29,10 @@
     <%= f.hidden_field :user_id, value: current_user.id %>
     <%= f.hidden_field :tape_id, value: @tape.id %>
     <%= f.text_area :context %>
-    <%= f.submit :opinions %>
+    <%= f.submit :opinion %>
 <% end %>
 
-OPNIONS:
+OPINIONS:
 <ul>
 <%= render @opinions %>
 </ul>
