--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,9 @@
               <li class="nav-item">
                 <%= link_to 'register', signup_path %> 
               </li>
+              <li class="nav-item">
+                <%= link_to 'Google Sign Up', "/auth/google_oauth2" %> 
+              </li>
             <% end %>
           
         </div>
