working with onmniauth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
                 <%= link_to 'register', signup_path %> 
               </li>
               <li class="nav-item">
-                <%= link_to 'Google Sign Up', "/auth/google_oauth2" %> 
+                <%= link_to 'Google Sign Up', "/auth/google_oauth2", method: "post" %> 
               </li>
             <% end %>
           
