created feature with active record to sort recent tapes and added in routes.rb as well

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,9 @@
               <li>
                 <%= link_to 'Create Mixtape', new_tape_path, class: 'nav-item' %> 
               </li>
+              <li>
+                <%= link_to 'Recent Release', recent_tape_path, class: 'nav-item' %> 
+              </li>
              
               <li class="nav-item">
               <%= link_to 'logout', logout_path, method: "delete" %> 
