--- a/app/views/tapes/home.html.erb
+++ b/app/views/tapes/home.html.erb
@@ -1,10 +1,19 @@
 <h1> MIXTAPE home page </h1>
+<br>
+<div>
+<H1> WELCOME BACK: <%= @current_user.name %> </H1>
+</div>
 
+<br>
+<p> Public uploaded Mixtapes below <p>
+
+<span>
 <ul>
 <% @tapes.each do |tap| %>
-    <li> <%= link_to(tap.title, tape_path(tap)) %> </li>
+    <li> <%= link_to(tap.title, tape_path(tap)) %> - created by: <%=tap.user.name %> <br> uploaded - <%=tap.uploaded_at %> </li>
     
 <% end %>
 
 
 </ul>
+</span>
