--- a/app/views/tapes/recent_tape.html.erb
+++ b/app/views/tapes/recent_tape.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
 <% @tapes.each do |tap| %>
-    <li> <%= link_to(tap.title, tape_path(tap)) %> - created by: <%=tap.user.name %> <br> uploaded - <%=tap.updated_at %> </li>
+    <li> <%= link_to(tap.title, tape_path(tap)) %> - created by: <%=tap.user.name %> <br> uploaded - <%=tap.uploaded_at %> </li>
     
 <% end %>
 
