--- a/app/views/opinions/_opinion.html.erb
+++ b/app/views/opinions/_opinion.html.erb
@@ -1,5 +1,11 @@
+
+
+
 <li>
 <%= opinion.user.name %> - 
  <%= opinion.context %><br>
+ <%= opinion.created_at%> <br>
+ 
  <%= link_to 'remove', tape_opinion_path(opinion.tape, opinion), method: "delete" %>
+
 </li>
