added a new helper method to detect user opinion

--- a/app/views/tapes/show.html.erb
+++ b/app/views/tapes/show.html.erb
@@ -23,6 +23,10 @@
     <p> genre: <%= @tape.genre %> </P>
     
     <p> <%= @tape.uploaded_at %> </p>
+    
+    <p> Number_of_Opinions: <%= @tape.opinions.count %> </p>
+
+    
 </div>
 <br>
 --------------------------------------------------------
