adding the nested route tape/:id/opinion/new route to add the form for opinions for that tape

--- a/app/views/tapes/home.html.erb
+++ b/app/views/tapes/home.html.erb
@@ -2,6 +2,10 @@
 <br>
 <div>
 <H1> WELCOME BACK: <%= @current_user.name %> </H1>
+ <% @current_user.tapes.each do |you| %> 
+    <li> <%= you.title %> </li>
+    <li> <%= you.opinions.count %> </li>
+    <% end %>
 </div>
 
 <br>
