adding the nested route tapes/:id/opinons to show the opinions of that tape

--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -1,2 +1,7 @@
-<H1> Index page  </H1>
+<H1> Index page of <%= @tape.title + "'s" %> opinions </H1>
 
+<% @opinions.each do |x| %>
+
+<%= x.context %>
+
+<% end %>
