--- a/app/views/opinions/new.html.erb
+++ b/app/views/opinions/new.html.erb
@@ -9,10 +9,21 @@
 
 <p> this is the opinion form page </p>
 
+<% if @opinion.errors.any? %>
+<div id="error_explanation">
+
+
+<ul>
+  <% @opinion.errors.each do |error| %>
+    <li><%= error.full_message %></li>
+  <% end %>
+</ul>
+</div>
+<% end %>
 
 <%= form_with(model:[@tape, @opinion]) do |f| %>
     <%= f.hidden_field :user_id, value: current_user.id %>
-    <%= f.hidden_field :tape_id, value: @tape.id %>
+   # <%= f.hidden_field :tape_id, value: @tape.id %>
     <%= f.text_area :context %>
     
     <%= f.submit :opinion %>
