--- a/app/views/tapes/new.html.erb
+++ b/app/views/tapes/new.html.erb
@@ -1,5 +1,18 @@
 <h1>     CREATE MIXTAPE    </h1>
 
+<% if @tape.errors.any? %>
+<div id="error_explanation">
+<h2><%= pluralize(@tape.errors.count, "error") %> caused this Mixtape from being saved:</h2>
+
+<ul>
+  <% @tape.errors.each do |error| %>
+    <li><%= error.full_message %></li>
+  <% end %>
+</ul>
+</div>
+<% end %>
+
+
 <%= form_with(model: @tape) do |f| %>
     <div class="field">
     <%= f.label :title %>
